<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".PhoneActivity">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/iv_cont_manga"
        android:src="@drawable/ic_phone_android" />

    <LinearLayout
        android:id="@+id/phoneLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_phone_title"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_caption"
            android:textAlignment="center"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/et_phone_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textAlignment="center"
            android:theme="@style/EditTextView" />

        <Button
            android:id="@+id/btn_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/segoe_ui_regular"
            android:text="@string/btn_phone"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/codeLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_phoneCode_title"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_sendCode"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_phoneCode_caption"
            android:textAlignment="center"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/et_phoneCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/tv_phoneCode_title"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textAlignment="center"
            android:theme="@style/EditTextView" />

        <TextView
            android:id="@+id/tv_resendCode"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/tv_resendCode"
            android:textAlignment="center"
            android:textColor="#777777" />

        <Button
            android:id="@+id/btn_phoneCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/segoe_ui_regular"
            android:text="@string/btn_resendCode"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>